Add Printify catalog images for realistic shirt previews
- Create PrintifyShirtMockup component with real catalog images
- Add printifyCatalogService for fetching product images
- Update all ShirtMockup usages to use new component
- Add family shirt type state for better previews
- Update .env.example with catalog API variables
- Support dynamic shirt types (men/women/kids) and colors
- Show loading states and fallbacks for catalog images

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,13 @@ VITE_API_BASE_URL=http://localhost:4000
 VITE_GEMINI_API_KEY=
 VITE_STRIPE_PUBLISHABLE_KEY=
 
+# Printify Catalog (Frontend)
+VITE_PRINTIFY_API_TOKEN=
+VITE_PRINTIFY_SHOP_ID=
+VITE_PRINTIFY_BLUEPRINT_ID_MEN=12
+VITE_PRINTIFY_BLUEPRINT_ID_WOMEN=9
+VITE_PRINTIFY_BLUEPRINT_ID_KIDS=81
+
 # Backend environment variables (used by server/index.js)
 PORT=4000
 CLIENT_URL=http://localhost:5173
